--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Mary's Portfolio</title>
-    <link rel="icon" href="images/MJ.png" type="image/x-icon">
+    <link rel="icon" href="images/LOGOS.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,15 +36,14 @@
     <div id="header">
         <div class="container box">
             <nav>
-                <img src="images/cover.png" class="logo" width="100px">
+                <img src="images/COVER1.png" class="logo" width="100px">
 
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="Section-Photo/photography.html">Photographs</a></li>
+                    <li><a href="Section-Photo/photography.html">Paintings</a></li>
                     <li><a href="#Achievements">Achievements</a></li>
-                    <li><a class="newprofile" href="https://sumonta056.vercel.app/">New Portfolio</a></li>
                     <li><a href="Section-Service/service.html">Services</a></li>
                     <li><a href="#contactme">Contact</a></li>
               
@@ -110,8 +109,8 @@
                 </div>
                 <div class="setdiv  animate__animated animate__slideInUp">
                     <h2>Hi, I'm <br></h2>
-                    <h1><span>Sumonta Saha <br>Mridul</span></h1>
-                    <p>Student🧑‍💻 - Software Engineer💻 - Photographer📸</p>
+                    <h1><span>Mary John <br>Mridul</span></h1>
+                    <p>Student🧑‍💻 - Data Analyst & Statistician💻 - Painter🎨</p>
                     <!-- <a href="https://git.io/typing-svg"><img
                             src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=600&size=22&pause=1000&width=435&lines=I'm+a+Software+Engineer+Student;I+am+also+a+Software+Developer+;Love+to+take+Photos+and+write+blogs"
                             alt="Typing SVG" /></a> -->
@@ -132,7 +131,7 @@
 
             <div class="notification"
                 onclick="window.location.href = 'https://drive.google.com/file/d/1kLgjjzp-QV0_T0wh7G2JMoD9wPOvtpkG/view?usp=sharing';">
-                <p>Would you like to check my CV ?😊</p>
+                <p>Would you like to check my Resume ?😊</p>
                 <span class="notification__progress"></span>
             </div>
 
@@ -167,10 +166,9 @@
 
                     <div class="sub-line">
                         <p>
-                            I am currently studying Software Engineering in Shahjalal University of Science and
-                            Technology (SUST). Besides, I am a <b>Software Developer💻</b> with a passion for coding and
-                            problem solving.
-                            I also love <b>Photography📸</b> as a creative outlet and capturing the world around me.
+                            I am currently studying Master's in Business Analytics in W.P.Carey School of Business, Arizona State University. Besides, I am a <b>Statistician💻</b> with passion for building models, desciphering relationships and
+                            problem solving, contributuing to the growth and success of my environment.
+                            I also love <b>Painting and Sketching🎨</b> as a creative outlet and putting forth my creativity into solid paper.
                         </p>
                     </div>
 
@@ -331,7 +329,7 @@
 
                 </div>
                 <div class="col-2">
-                    <img src="images/about.png">
+                    <img src="images/about1.jpeg">
 
                 </div>
 
@@ -1264,8 +1262,7 @@
             <div class="contact-form">
                 <h1>Contact <span class="us">Me</spanc>
                 </h1>
-                <p>I am available for work. Connect with wih me via phone: 01845359479 or
-                    email: sumonta80@gmail.com
+                <p>I am available for work. Connect with wih me via email: mjohn28@asu.edu
                 </p>
                 <form action="https://formspree.io/f/mknabrlj" method="POST">
                     <input type="name" name="name" placeholder="Your Name" required>
@@ -1277,7 +1274,7 @@
 
             </div>
             <div class="contact-img">
-                <img class="check" src="images/contact.jpg">
+                <img class="check" src="images/contact1.jpeg">
             </div>
         </section>
     </div>
