--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
                 <div class="setdiv  animate__animated animate__slideInUp">
                     <h2>Hi, I'm <br></h2>
-                    <h1><span>Mary John <br>Mridul</span></h1>
+                    <h1><span>Mary John </span></h1>
                     <p>Student🧑‍💻 - Data Analyst & Statistician💻 - Painter🎨</p>
                     <!-- <a href="https://git.io/typing-svg"><img
                             src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=600&size=22&pause=1000&width=435&lines=I'm+a+Software+Engineer+Student;I+am+also+a+Software+Developer+;Love+to+take+Photos+and+write+blogs"
