--- a/index.html
+++ b/index.html
@@ -181,17 +181,17 @@
 
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Competitive Programing : <br></span>
+                            <li><span>Programming &amp; Database Management :<br></span>
                                 <div class="space1">
                                     <img
-                                        src="https://img.shields.io/badge/c-%2300599C.svg?style=for-the-badge&logo=c&logoColor=white">
+                                        src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white">
                                     <img
-                                        src="https://img.shields.io/badge/c++-%2300599C.svg?style=for-the-badge&logo=c%2B%2B&logoColor=white">
+                                        src="https://img.shields.io/badge/MySQL-4479A1?style=for-the-badge&logo=mysql&logoColor=white">
                                     <img
                                         src="https://img.shields.io/badge/Visual%20Studio%20Code-0078d7.svg?style=for-the-badge&logo=visual-studio-code&logoColor=white">
                                 </div>
                             </li>
-                            <li><span>App Development : <br></span>
+                            <li><span>Data Analytics & Visualization : <br></span>
                                 <div class="space1">
                                     <img
                                         src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white">
@@ -201,7 +201,7 @@
                                         src="https://img.shields.io/badge/Android%20Studio-3DDC84.svg?style=for-the-badge&logo=android-studio&logoColor=white">
                                 </div>
                             </li>
-                            <li><span>Web Development : <br></span>
+                            <li><span>Statistical & Predictive Modeling:  <br></span>
                                 <div class="space1">
                                     <img
                                         src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white">
@@ -211,7 +211,7 @@
                                         src="https://img.shields.io/badge/javascript-%23323330.svg?style=for-the-badge&logo=javascript&logoColor=%23F7DF1E">
                                 </div>
                             </li>
-                            <li><span>Graphic & UI/UX Designing : <br></span>
+                            <li><span>Business Tools:  <br></span>
                                 <div class="space1">
                                     <img
                                         src="https://img.shields.io/badge/Canva-%2300C4CC.svg?style=for-the-badge&logo=Canva&logoColor=white">
@@ -221,7 +221,7 @@
                                         src="https://img.shields.io/badge/figma-%23F24E1E.svg?style=for-the-badge&logo=figma&logoColor=white">
                                 </div>
                             </li>
-                            <li><span> Collaboration : <br></span>
+                            <li><span> Competencies : <br></span>
                                 <div class="space1">
                                     <img
                                         src="https://img.shields.io/badge/git-%23F05033.svg?style=for-the-badge&logo=git&logoColor=white">
