--- a/index.html
+++ b/index.html
@@ -284,25 +284,25 @@
 
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span class="Education"><b>B.Sc in Software Engineering</b> </span><br>
+                            <li><span class="Education"><b>M.S in Business Analytics</b> </span><br>
 
-                                <p>Shahjalal University of Science and Technology, Sylhet </p>
-                                <p align="left">2020 - Present <span class="cg">(CGPA - 3.73)</span> </p>
+                                <p>W.P. Carey School of Business, Arizona State University, USA </p>
+                                <p align="left">Aug 2024 - Dec 2025 <span class="cg">(CGPA - 3.93)</span> </p>
 
 
                             </li><br>
-                            <li><span class="Education"><b>HSC</b> </span><br>
+                            <li><span class="Education"><b>M.S. in Statistics</b> </span><br>
 
-                                <p>Notre Dame College, Dhaka</p>
-                                <p align="left">2017 - 2019 <span class="cgs">(GPA - 5.00)
+                                <p>Christ University, India</p>
+                                <p align="left">Jun 2021 - May 2023 <span class="cgs">(GPA - 5.00)
                                     </span> </p>
 
 
                             </li><br>
-                            <li><span class="Education"><b>SSC</b> </span><br>
+                            <li><span class="Education"><b>B.S in Economics, Mathematics, Statistics <br>(Triple Major)</br></b> </span><br>
 
-                                <p>Narayanganj Ideal School, Narayanganj </p>
-                                <p align="left">2015 - 2017 <span class="cgs">(GPA - 5.00)</span> </p>
+                                <p>Christ University, India </p>
+                                <p align="left">Jun 2018 - May 2021 <span class="cgs">(GPA - 5.00)</span> </p>
 
 
                             </li>
@@ -311,7 +311,7 @@
 
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span class="Education"><b>Looking For Intership Oppurtunity</b> </span><br>
+                            <li><span class="Education"><b>Looking For Full-time Oppurtunities</b> </span><br>
 
                                 <p>Check Out My CV</p>
                                 <button class="button"
