--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
                     <div class="sub-line">
                         <p>
-                            I am currently studying Master's in Business Analytics in W.P.Carey School of Business, Arizona State University. Besides, I am a <b>Statistician💻</b> with passion for building models, desciphering relationships and
+                            I am currently studying Master's in Business Analytics in W.P. Carey School of Business, Arizona State University. Besides, I am a <b>Statistician💻</b> with passion for building models, deciphering relationships and
                             problem solving, contributuing to the growth and success of my environment.
                             I also love <b>Painting and Sketching🎨</b> as a creative outlet and putting forth my creativity into solid paper.
                         </p>
@@ -191,14 +191,17 @@
                                         src="https://img.shields.io/badge/Visual%20Studio%20Code-0078d7.svg?style=for-the-badge&logo=visual-studio-code&logoColor=white">
                                 </div>
                             </li>
-                            <li><span>Data Analytics & Visualization : <br></span>
+                            <li>
+                              <span>Data Analytics &amp; Visualization :<br></span>
                                 <div class="space1">
-                                    <img
-                                        src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white">
-                                    <img
-                                        src="https://img.shields.io/badge/kotlin-%237F52FF.svg?style=for-the-badge&logo=kotlin&logoColor=white">
-                                    <img
-                                        src="https://img.shields.io/badge/Android%20Studio-3DDC84.svg?style=for-the-badge&logo=android-studio&logoColor=white">
+                                        <!-- Advanced Excel badge (green with Excel logo) -->
+                                    <img      src="https://img.shields.io/badge/Advanced%20Excel-217346?style=for-the-badge&logo=excel&logoColor=white" alt="Advanced Excel" />
+                                        <!-- Power BI badge (yellow with Power BI logo) -->
+                                    <img src="https://img.shields.io/badge/Power%20BI-F2C811?style=for-the-badge&logo=power-bi&logoColor=black" alt="Power BI" />
+                                        <!-- Tableau badge (orange with Tableau logo) -->
+                                    <img src="https://img.shields.io/badge/Tableau-E97627?style=for-the-badge&logo=tableau&logoColor=white" alt="Tableau"/>
+                                         <!-- SAP Cloud Analytics badge (SAP blue with SAP logo) -->
+                                    <img src="https://img.shields.io/badge/SAP%20Cloud%20Analytics-0C60A6?style=for-the-badge&logo=sap&logoColor=white" alt="SAP Cloud Analytics" />
                                 </div>
                             </li>
                             <li><span>Statistical & Predictive Modeling:  <br></span>
