--- a/index.html
+++ b/index.html
@@ -201,39 +201,54 @@
                                         <!-- Tableau badge (orange with Tableau logo) -->
                                     <img src="https://img.shields.io/badge/Tableau-E97627?style=for-the-badge&logo=tableau&logoColor=white" alt="Tableau"/>
                                          <!-- SAP Cloud Analytics badge (SAP blue with SAP logo) -->
-                                    <img src="https://img.shields.io/badge/SAP%20Cloud%20Analytics-0C60A6?style=for-the-badge&logo=sap&logoColor=white" alt="SAP Cloud Analytics" />
+                                    <img src="https://img.shields.io/badge/SAP%20Analytics%20Cloud-0C60A6?style=for-the-badge&logo=sap&logoColor=white" alt="SAP Analytics Cloud" />
                                 </div>
-                            </li>
-                            <li><span>Statistical & Predictive Modeling:  <br></span>
-                                <div class="space1">
-                                    <img
-                                        src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white">
-                                    <img
-                                        src="https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white">
-                                    <img
-                                        src="https://img.shields.io/badge/javascript-%23323330.svg?style=for-the-badge&logo=javascript&logoColor=%23F7DF1E">
+                            <li>
+                               <span>Statistical &amp; Predictive Modeling :<br>
+                               </span>
+                                 <div class="space1">
+    <!-- SPSS badge (IBM/ SPSS dark blue) -->
+                                    <img src="https://img.shields.io/badge/SPSS-052F5F?style=for-the-badge&logo=spss&logoColor=white"  alt="SPSS"/>
+    <!-- R Programming badge (R blue) -->
+                                    <img src="https://img.shields.io/badge/R%20Programming-276DC3?style=for-the-badge&logo=r&logoColor=white" alt="R Programming"  />
                                 </div>
                             </li>
                             <li><span>Business Tools:  <br></span>
                                 <div class="space1">
                                     <img
                                         src="https://img.shields.io/badge/Canva-%2300C4CC.svg?style=for-the-badge&logo=Canva&logoColor=white">
-                                    <img
-                                        src="https://img.shields.io/badge/Adobe%20Lightroom-31A8FF?style=for-the-badge&logo=Adobe%20Lightroom&logoColor=white">
-                                    <img
-                                        src="https://img.shields.io/badge/figma-%23F24E1E.svg?style=for-the-badge&logo=figma&logoColor=white">
+                                    <!-- Microsoft Office Suite badge -->
+                                    <img  src="https://img.shields.io/badge/Microsoft%20Office%20Suite-%23D83B01?style=for-the-badge&logo=microsoft-office&logoColor=white" alt="Microsoft Office Suite" />
+                                    <!-- Google Workspace badge -->
+                                    <img src="https://img.shields.io/badge/Google%20Workspace-%234285F4?style=for-the-badge&logo=google&logoColor=white" alt="Google Workspace" />
                                 </div>
                             </li>
-                            <li><span> Competencies : <br></span>
-                                <div class="space1">
-                                    <img
-                                        src="https://img.shields.io/badge/git-%23F05033.svg?style=for-the-badge&logo=git&logoColor=white">
-                                    <img
-                                        src="https://img.shields.io/badge/github-%23121011.svg?style=for-the-badge&logo=github&logoColor=white">
-                                    <img
-                                        src="https://img.shields.io/badge/markdown-%23000000.svg?style=for-the-badge&logo=markdown&logoColor=white">
-                                </div>
-                            </li>
+                            <li><span>Competencies :<br></span>
+                              <div class="space1">
+                                <!-- Core Data & Analytical Skills -->
+                                   <img src="https://img.shields.io/badge/Core%20Data%20%26%20Analytical%20Skills-%236A737D.svg?style=for-the-badge" alt="Core Data & Analytical Skills"/>
+                                <!-- Problem Solving -->
+                                    <img src="https://img.shields.io/badge/Problem%20Solving-%236A737D.svg?style=for-the-badge" alt="Problem Solving" />
+                                <!-- Critical Thinking -->
+                                    <img src="https://img.shields.io/badge/Critical%20Thinking-%236A737D.svg?style=for-the-badge" alt="Critical Thinking"/>
+                                <!-- Attention to Detail -->
+                                    <img src="https://img.shields.io/badge/Attention%20to%20Detail-%236A737D.svg?style=for-the-badge" alt="Attention to Detail"/>
+                                <!-- Communication (Written & Verbal) -->
+                                    <img src="https://img.shields.io/badge/Communication%20%28Written%20%26%20Verbal%29-%236A737D.svg?style=for-the-badge" alt="Communication (Written & Verbal)" />
+                                <!-- Time Management -->
+                                    <img src="https://img.shields.io/badge/Time%20Management-%236A737D.svg?style=for-the-badge" alt="Time Management" />
+                                <!-- Adaptability -->
+                                    <img src="https://img.shields.io/badge/Adaptability-%236A737D.svg?style=for-the-badge" alt="Adaptability"/>
+                                <!-- Teamwork -->
+                                    <img src="https://img.shields.io/badge/Teamwork-%236A737D.svg?style=for-the-badge" alt="Teamwork" />
+                                <!-- Technical & Business Acumen -->
+                                    <img src="https://img.shields.io/badge/Technical%20%26%20Business%20Acumen-%236A737D.svg?style=for-the-badge" alt="Technical & Business Acumen" />
+                                <!-- Self-starter -->
+                                    <img src="https://img.shields.io/badge/Self-starter-%236A737D.svg?style=for-the-badge" alt="Self-starter"/>
+                                <!-- Fast Learner -->
+                                    <img src="https://img.shields.io/badge/Fast%20Learner-%236A737D.svg?style=for-the-badge" alt="Fast Learner" />
+                              </div>
+                        </li>
                         </ul>
                     </div>
 
