--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
                                     <img src="https://img.shields.io/badge/Power%20BI-F2C811?style=for-the-badge&logo=power-bi&logoColor=black" alt="Power BI" />
                                         <!-- Tableau badge (orange with Tableau logo) -->
                                     <img src="https://img.shields.io/badge/Tableau-E97627?style=for-the-badge&logo=tableau&logoColor=white" alt="Tableau"/>
-                                         <!-- SAP Cloud Analytics badge (SAP blue with SAP logo) -->
-                                    <img src="https://img.shields.io/badge/SAP%20Analytics%20Cloud-0C60A6?style=for-the-badge&logo=sap&logoColor=white" alt="SAP Analytics Cloud" />
+                                    
                                 </div>
                             <li>
                                <span>Statistical &amp; Predictive Modeling :<br>
@@ -223,32 +222,28 @@
                                     <img src="https://img.shields.io/badge/Google%20Workspace-%234285F4?style=for-the-badge&logo=google&logoColor=white" alt="Google Workspace" />
                                 </div>
                             </li>
-                            <li><span>Competencies :<br></span>
-                              <div class="space1">
-                                <!-- Core Data & Analytical Skills -->
-                                   <img src="https://img.shields.io/badge/Core%20Data%20%26%20Analytical%20Skills-%236A737D.svg?style=for-the-badge" alt="Core Data & Analytical Skills"/>
-                                <!-- Problem Solving -->
-                                    <img src="https://img.shields.io/badge/Problem%20Solving-%236A737D.svg?style=for-the-badge" alt="Problem Solving" />
-                                <!-- Critical Thinking -->
-                                    <img src="https://img.shields.io/badge/Critical%20Thinking-%236A737D.svg?style=for-the-badge" alt="Critical Thinking"/>
-                                <!-- Attention to Detail -->
-                                    <img src="https://img.shields.io/badge/Attention%20to%20Detail-%236A737D.svg?style=for-the-badge" alt="Attention to Detail"/>
-                                <!-- Communication (Written & Verbal) -->
-                                    <img src="https://img.shields.io/badge/Communication%20%28Written%20%26%20Verbal%29-%236A737D.svg?style=for-the-badge" alt="Communication (Written & Verbal)" />
-                                <!-- Time Management -->
-                                    <img src="https://img.shields.io/badge/Time%20Management-%236A737D.svg?style=for-the-badge" alt="Time Management" />
-                                <!-- Adaptability -->
-                                    <img src="https://img.shields.io/badge/Adaptability-%236A737D.svg?style=for-the-badge" alt="Adaptability"/>
-                                <!-- Teamwork -->
-                                    <img src="https://img.shields.io/badge/Teamwork-%236A737D.svg?style=for-the-badge" alt="Teamwork" />
-                                <!-- Technical & Business Acumen -->
-                                    <img src="https://img.shields.io/badge/Technical%20%26%20Business%20Acumen-%236A737D.svg?style=for-the-badge" alt="Technical & Business Acumen" />
-                                <!-- Self-starter -->
-                                    <img src="https://img.shields.io/badge/Self-starter-%236A737D.svg?style=for-the-badge" alt="Self-starter"/>
-                                <!-- Fast Learner -->
-                                    <img src="https://img.shields.io/badge/Fast%20Learner-%236A737D.svg?style=for-the-badge" alt="Fast Learner" />
-                              </div>
-                        </li>
+                            <li><span>Cloud Platforms & Services :<br></span>
+                                <div class="space1">
+                                        <!-- AWS EC2 -->
+                                    <img src="https://img.shields.io/badge/AWS%20EC2-%23FF9900.svg?style=for-the-badge&logo=amazon-aws&logoColor=white" alt="AWS EC2" />
+                                <!-- AWS Bedrock -->
+                                    <img  src="https://img.shields.io/badge/AWS%20Bedrock-%23FF9900.svg?style=for-the-badge&logo=amazon-aws&logoColor=white" alt="AWS Bedrock" />
+                 <!-- SAP Cloud Analytics badge (SAP blue with SAP logo) -->
+                                    <img src="https://img.shields.io/badge/SAP%20Analytics%20Cloud-0C60A6?style=for-the-badge&logo=sap&logoColor=white" alt="SAP Analytics Cloud" />
+                                </div>
+                            </li>
+                            <li> <span>Cross-Functional Abilities :<br></span>
+                                <div class="space1">
+                                    <!-- Agile / Scrum -->
+                                    <img src="https://img.shields.io/badge/Agile%20%2F%20Scrum-6A737D?style=for-the-badge" alt="Agile / Scrum"  />
+                                <!-- Stakeholder Management -->
+                                    <img src="https://img.shields.io/badge/Stakeholder%20Management-6A737D?style=for-the-badge"  alt="Stakeholder Management"  />
+                                <!-- Process Improvement -->
+                                    <img src="https://img.shields.io/badge/Process%20Improvement-6A737D?style=for-the-badge" alt="Process Improvement" />
+                                <!-- Ethics / Governance -->
+                                    <img src="https://img.shields.io/badge/Ethics%20%2F%20Governance-6A737D?style=for-the-badge" alt="Ethics / Governance" />
+                                 </div>
+                            </li>
                         </ul>
                     </div>
 
